Place duct tape on iOS status bar background remaining white issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,7 @@ body {
 .backdrop {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.40) 100%), #022B3A;
 }
+
+.backdrop-ios {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.40) 10%), #022B3A;
+}
